Modificato pom per coverage